--- a/about/index.html
+++ b/about/index.html
@@ -10,16 +10,8 @@ title: 关于我
     </div>
 
     <div class="bg-white bg-opacity-10 backdrop-blur-md rounded-lg p-8 md:p-12 text-white">
-        <div class="prose prose-invert max-w-none">
-            <p class="text-lg leading-relaxed mb-6">
-                这里可以添加你的个人介绍、教育背景、工作经历等信息。
-            </p>
-            <p class="text-lg leading-relaxed mb-6">
-                你可以使用 Markdown 格式来编写内容，Jekyll 会自动渲染。
-            </p>
-            <p class="text-lg leading-relaxed">
-                更多内容待添加...
-            </p>
+        <div class="prose prose-invert max-w-none text-center">
+            <p class="text-lg leading-relaxed text-white text-opacity-60">暂无内容</p>
         </div>
     </div>
 </div>
