--- a/projects/index.html
+++ b/projects/index.html
@@ -7,7 +7,6 @@ title: 项目展示
     <div class="text-center mb-12">
         <h1 class="text-5xl md:text-6xl font-bold text-white mb-4">项目展示</h1>
         <div class="divider mx-auto"></div>
-        <p class="text-white text-opacity-80 mt-4">以下是我的一些项目作品</p>
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -30,22 +29,8 @@ title: 项目展示
         </div>
         {% else %}
         <div class="col-span-full bg-white bg-opacity-10 backdrop-blur-md rounded-lg p-12 text-center">
-            <p class="text-white text-opacity-60">暂无项目，项目内容将在 _projects 目录中添加</p>
+            <p class="text-white text-opacity-60">暂无项目</p>
         </div>
         {% endfor %}
-    </div>
-
-    <!-- 占位卡片示例 -->
-    <div class="mt-8 bg-white bg-opacity-5 backdrop-blur-sm rounded-lg p-6 border border-white border-opacity-10">
-        <h3 class="text-lg font-semibold text-white mb-2">📝 如何添加项目？</h3>
-        <p class="text-white text-opacity-70 text-sm">
-            在 <code class="bg-black bg-opacity-30 px-2 py-1 rounded">_projects</code> 目录中创建 Markdown 文件，使用以下 front matter 格式：
-        </p>
-        <pre class="mt-4 bg-black bg-opacity-30 p-4 rounded text-xs text-white overflow-x-auto"><code>---
-title: 项目名称
-description: 项目描述
-tags: [标签1, 标签2]
-link: https://example.com
----</code></pre>
     </div>
 </div>
